@@ -4,6 +4,8 @@ Changelog for hydra
 Release 9.4-dev
 * Switched from pcre/pcre3 to pcre2 as pcre/pcre3 will be dropped from Debian
 * Small fix for weird RTSP servers
+* Added "2=" optional parameter to http-post-form module to tell hydra that
+  a "302" HTTP return code means success
 
 
 Release 9.3
